# micro-tube-app

./: README.md
backend/: .env  local.env  pyproject.toml  youtube.py
backend/app/: __init__.py  client.py  config.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  app.css  app.js
frontend/src/apps/components/body/: body.style.js  index.js
frontend/src/apps/components/header/: header.style.js  index.js
frontend/src/apps/components/sidebar/: index.js  sidebar.style.js
frontend/src/apps/components/videos/: index.js  videos.style.js
