[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Samir Mamude"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
google-api-python-client = "^2.27.0"
prettyconf = "^2.2.1"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
